# sipxecs

./: .buildinfo  .gitignore  .gitmodules  .modules-exclude  README.md  apiref.html  building.html  configure.ac  faq.html  features.html  genindex.html  history.html  howto.html  index.html  installing.html  maintenance.html  master-build.sh  monitoring.html  objects.inv  planning.html  restapi.html  search.html  searchindex.js  setupscript.html  sipxcustomcallerid.spec.in  sipxecs-build  sipxecs-remove  sipxecs-revert  soapapi.html  troubleshooting.html  upgrading.html  webui.html
.doctrees/: apiref.doctree  building.doctree  environment.pickle  faq.doctree  features.doctree  history.doctree  howto.doctree  index.doctree  installing.doctree  maintenance.doctree  monitoring.doctree  planning.doctree  restapi.doctree  setupscript.doctree  soapapi.doctree  troubleshooting.doctree  upgrading.doctree  webui.doctree
.github/: FUNDING.yml
_sources/: faq.rst.txt  history.rst.txt  installing.rst.txt  setupscript.rst.txt  upgrading.rst.txt
config/: dart.m4  general.m4  java.am  revision-gen
dart-sdk/: .sipxecs.mk
doc/: configure.ac
docs/: rebuild.sh
etc/: Makefile.am  ccid.xml
mak/: centos-iso.mk.in  list-dependencies.mk.in  modules.mk  rpm.m4  setup.mk.in
meta/: diff_default_exceptions.csv
mod_bcg729/: Makefile.am  configure.ac
net-snmp/: net-snmp.spec
old/: README.md
sipXAocBilling/: .project  configure.ac  sipxaocbilling.spec.in
sipXaastra/: .project  configure.ac  (+1 more)
sipXcustomCallerId/proxy-plugin/src/: CallerID.cpp  CallerID.h  Makefile.am
(+493 files in other folders)
